@@ -35,6 +35,7 @@ mscfparser      3     CMP
 zipparser       2     ZIP
 gzipparser      2     GZIP
 isoparser       2     REC
+iscparser       2     ZLIB
 
 Priority  - is set by parser and type is returned by parser.
 Type - is what the parser reports to "analyzer" if something was found.
